# borg-cataclysm

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  resources.rc
src/core/: Game.cpp  Game.h  GameSession.cpp  GameSession.h
src/data/: ShipData.h  ShipRepository.h
src/effects/: Explosion.cpp  Explosion.h
src/entities/: Entity.h  Player.cpp  Player.h  SpaceShip.cpp  SpaceShip.h
src/entities/items/: PowerUp.cpp  PowerUp.h
src/entities/projectiles/: CurvedProjectile.cpp  CurvedProjectile.h  LaserProjectile.cpp  LaserProjectile.h  MissileProjectile.cpp  MissileProjectile.h  Projectile.cpp  Projectile.h
src/entities/ships/: SpaceShip.cpp  SpaceShip.h
src/entities/ships/enemies/: BorgCube.cpp  BorgCube.h  Enemy.cpp  Enemy.h  Explorer.cpp  Explorer.h  Scout.cpp  Scout.h
src/environment/: StarField.cpp  StarField.h
src/managers/: CollisionManager.cpp  CollisionManager.h  EntityManager.h  LevelManager.cpp  LevelManager.h  ResourceManager.cpp  ResourceManager.h
src/scenes/: GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.h  ScoreScene.cpp  ScoreScene.h  SelectionScene.cpp  SelectionScene.h
src/ui/: HUD.cpp  HUD.h  UITheme.cpp  UITheme.h
src/weapons/: LaserLauncher.cpp  LaserLauncher.h  MissileLauncher.cpp  MissileLauncher.h  Weapon.cpp  Weapon.h
